Dodanie Layout.cshtml

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,49 @@
-﻿
-@{
-    ViewBag.Title = "Index";
-}
-
-<h2>Index</h2>
-
+﻿<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-4">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Kategorie</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>Kategoria 1</td></tr>
+                    <tr><td>Kategoria 2</td></tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-8">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Obrazek</th>
+                        <th>Nazwa przedmiotu</th>
+                        <th>Opis</th>
+                        <th>Kategoria</th>
+                        <th>Cena</th>
+                        <th>Kup</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><img src="asd.jpg"></td>
+                        <td>Przedmiot 1</td>
+                        <td>Opis przedmiotu 1</td>
+                        <td>Hamulce</td>
+                        <td>100 PLN</td>
+                        <td><button class="btn btn-primary">Kup teraz</button></td>
+                    </tr>
+                    <tr>
+                        <td><img src="asd.jpg"></td>
+                        <td>Przedmiot 2</td>
+                        <td>Opis przedmiotu 2</td>
+                        <td>Hamulce</td>
+                        <td>99 PLN</td>
+                        <td><button class="btn btn-primary">Kup teraz</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        </div>
+</div>
