--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <script sec="~/Content/src/jquery-3.3.1.slim.min.js"></script>
     <script src="~/Content/src/bootstrap.min.js"></script>
     <link href="~/Content/src/strona.css" rel="stylesheet" />
+    @System.Web.Optimization.Styles.Render("~/Content/themes/base/css")
 
 </head>
 <body class="d-flex flex-column min-vh-100">
