--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -5,46 +5,46 @@
 }
 
 <div class="container">
-        @using (Html.BeginForm("Register", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-        {
-            @Html.AntiForgeryToken()
-            <h2>Rejestracja</h2>
-            <hr />
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <h2>Rejestracja</h2>
+        <hr />
 
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.ValidationMessage("loginerror", new { @class = "text-danger" })
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        @Html.ValidationMessage("loginerror", new { @class = "text-danger" })
 
-            <div class="form-group">
-                @Html.LabelFor(o => o.Email, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(o => o.Email, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(o => o.Email, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            @Html.LabelFor(o => o.Email, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(o => o.Email, new { @class = "form-control" })
+                @Html.ValidationMessageFor(o => o.Email, "", new { @class = "text-danger" })
             </div>
-            <div class="form-group">
-                @Html.LabelFor(o => o.Password, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(o => o.Password, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(o => o.Password, "", new { @class = "text-danger" })
-                </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(o => o.Password, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.PasswordFor(o => o.Password, new { @class = "form-control" })
+                @Html.ValidationMessageFor(o => o.Password, "", new { @class = "text-danger" })
             </div>
-            <div class="form-group">
-                @Html.LabelFor(o => o.ConfirmPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(o => o.ConfirmPassword, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(o => o.ConfirmPassword, "", new { @class = "text-danger" })
-                </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(o => o.ConfirmPassword, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.PasswordFor(o => o.ConfirmPassword, new { @class = "form-control" })
+                @Html.ValidationMessageFor(o => o.ConfirmPassword, "", new { @class = "text-danger" })
             </div>
-            <div class="form-group">
-                <input type="submit" value="Zarejestruj się" class="btn btn-success btn-block" />
-            </div>
-        }
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Zarejestruj się" class="btn btn-success btn-block" />
+        </div>
+    }
 
 
     <p class="text-center w-100">
         <a href="@Url.Action("Login")">Masz już konto? Zaloguj się.</a>
     </p>
-    </div>
+</div>
 
     @section Scripts
 {
