--- a/Views/Produkty/Szczegoly.cshtml
+++ b/Views/Produkty/Szczegoly.cshtml
@@ -25,7 +25,12 @@
                             Kup za @Model.CenaProduktu zł
                         </button>
                     </div>
-                    <p><h2>Opis produktu:</h2> @Model.OpisProduktu</p>
+                    <h2>Opis produktu:</h2>
+                    
+                        <div class="col-md-4">
+                    @Model.OpisProduktu
+                        
+                        </div>
                 </div>
             </div>
         </div>
