--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
                 {
                     @Html.AntiForgeryToken()
             <div>
-                @Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes:new {title = "Manage"})
+                @Html.ActionLink(User.Identity.GetUserName(), "Index", "Zarzadzanie", routeValues: null, htmlAttributes:new {title = "Manage"})
             </div>
             <div>
                 <a href="javascript:document.getElementById('logoutForm').submit()">Wyloguj</a>
